Resolved merge conflicts and merged changes