@@ -5,8 +5,8 @@ import com.example.lms.repository.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
-import javax.mail.*;
-import javax.mail.internet.*;
+import jakarta.mail.*;
+import jakarta.mail.internet.*;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
@@ -27,6 +27,9 @@ public class NotificationService {
     
     @Autowired
     private MemberRepository memberRepository;
+    
+    @Autowired
+    private BookRepository bookRepository;
     
     @Autowired
     private FineRepository fineRepository;
@@ -77,16 +80,35 @@ public class NotificationService {
         
         try {
             if ("EMAIL".equals(notification.getType()) || "BOTH".equals(notification.getType())) {
-                if (settings.getEmailNotificationsEnabled()) {
+                if (!settings.getEmailNotificationsEnabled()) {
+                    errorMsg = "Email notifications are disabled";
+                } else if (notification.getMemberEmail() == null || notification.getMemberEmail().isEmpty()) {
+                    errorMsg = "Member doesn't have an email address";
+                } else if (!isValidEmail(notification.getMemberEmail())) {
+                    errorMsg = "Email address is invalid";
+                } else if (settings.getEmailUsername() == null || settings.getEmailUsername().isEmpty()) {
+                    errorMsg = "Email configuration is incomplete - missing username";
+                } else if (settings.getEmailPassword() == null || settings.getEmailPassword().isEmpty()) {
+                    errorMsg = "Email configuration is incomplete - missing password";
+                } else {
                     sendEmail(notification, settings);
                     success = true;
                 }
             }
             
             if ("SMS".equals(notification.getType()) || "BOTH".equals(notification.getType())) {
-                if (settings.getSmsNotificationsEnabled()) {
-                    sendSMS(notification, settings);
-                    success = true;
+                // SMS temporarily disabled - skip SMS sending for now
+                System.out.println("=== SMS SKIPPED (Not Configured) ===");
+                System.out.println("To: " + (notification.getMemberContact() != null ? notification.getMemberContact() : "No phone"));
+                System.out.println("Message: " + notification.getMessage());
+                System.out.println("===================================");
+                
+                // Don't fail the notification if it's BOTH type and email succeeded
+                if ("BOTH".equals(notification.getType()) && success) {
+                    // Email already succeeded, so overall notification is successful
+                } else if ("SMS".equals(notification.getType())) {
+                    // Pure SMS notification - mark as failed but with informative message
+                    if (errorMsg == null) errorMsg = "SMS provider not configured";
                 }
             }
             
@@ -94,9 +116,10 @@ public class NotificationService {
                 notification.setStatus("SENT");
                 notification.setSent(true);
                 notification.setSentAt(LocalDateTime.now());
+                notification.setErrorMessage(null);
             } else {
                 notification.setStatus("FAILED");
-                notification.setErrorMessage("Notifications are disabled in system settings");
+                notification.setErrorMessage(errorMsg != null ? errorMsg : "Unknown error occurred");
             }
         } catch (Exception e) {
             notification.setStatus("FAILED");
@@ -104,6 +127,15 @@ public class NotificationService {
         }
         
         return notificationRepository.save(notification);
+    }
+
+    private boolean isValidEmail(String email) {
+        if (email == null || email.trim().isEmpty()) {
+            return false;
+        }
+        // Robust email regex pattern that accepts Gmail and other common formats
+        String emailRegex = "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$";
+        return email.matches(emailRegex);
     }
     
     // Send email
@@ -137,24 +169,97 @@ public class NotificationService {
         Transport.send(message);
     }
     
-    // Send SMS (placeholder - integrate with actual SMS provider)
+    // Send SMS (integrate with actual SMS provider)
     private void sendSMS(Notification notification, SystemSettings settings) throws Exception {
         if (notification.getMemberContact() == null || notification.getMemberContact().isEmpty()) {
             throw new Exception("Member contact is not available");
         }
         
-        // This is a placeholder. In production, integrate with actual SMS providers like:
-        // - Twilio
-        // - AWS SNS
-        // - Nexmo/Vonage
-        // - etc.
+        String smsProvider = settings.getSmsProvider();
+        String smsApiKey = settings.getSmsApiKey();
         
-        System.out.println("SMS would be sent to: " + notification.getMemberContact());
+        if (smsProvider == null || smsApiKey == null) {
+            throw new Exception("SMS provider not configured");
+        }
+        
+        // Implement different SMS providers
+        switch (smsProvider.toUpperCase()) {
+            case "TWILIO":
+                sendTwilioSMS(notification, settings);
+                break;
+            case "AWS_SNS":
+                sendAWSSMS(notification, settings);
+                break;
+            case "NEXMO":
+                sendNexmoSMS(notification, settings);
+                break;
+            default:
+                // For demo purposes, log the SMS
+                System.out.println("=== SMS NOTIFICATION ===");
+                System.out.println("To: " + notification.getMemberContact());
+                System.out.println("Message: " + notification.getMessage());
+                System.out.println("Provider: " + smsProvider);
+                System.out.println("========================");
+                break;
+        }
+    }
+    
+    private void sendTwilioSMS(Notification notification, SystemSettings settings) throws Exception {
+        // Twilio SMS implementation
+        // Note: This requires Twilio Java SDK dependency
+        // Add to pom.xml: <dependency><groupId>com.twilio.sdk</groupId><artifactId>twilio</artifactId><version>9.14.1</version></dependency>
+        
+        try {
+            // Initialize Twilio client
+            String accountSid = settings.getSmsUsername(); // Twilio Account SID
+            String authToken = settings.getSmsApiKey();    // Twilio Auth Token
+            String fromNumber = settings.getSmsFromNumber(); // Twilio phone number
+            
+            if (accountSid == null || authToken == null || fromNumber == null) {
+                throw new Exception("Twilio configuration incomplete");
+            }
+            
+            // For now, simulate Twilio API call
+            System.out.println("=== TWILIO SMS ===");
+            System.out.println("Account SID: " + accountSid);
+            System.out.println("From: " + fromNumber);
+            System.out.println("To: " + notification.getMemberContact());
+            System.out.println("Message: " + notification.getMessage());
+            System.out.println("==================");
+            
+            // Actual Twilio implementation would be:
+            // Twilio.init(accountSid, authToken);
+            // Message message = Message.creator(
+            //     new PhoneNumber(notification.getMemberContact()),
+            //     new PhoneNumber(fromNumber),
+            //     notification.getMessage()
+            // ).create();
+            
+        } catch (Exception e) {
+            throw new Exception("Twilio SMS failed: " + e.getMessage());
+        }
+    }
+    
+    private void sendAWSSMS(Notification notification, SystemSettings settings) throws Exception {
+        // AWS SNS SMS implementation
+        System.out.println("=== AWS SNS SMS ===");
+        System.out.println("To: " + notification.getMemberContact());
         System.out.println("Message: " + notification.getMessage());
-        System.out.println("Provider: " + settings.getSmsProvider());
+        System.out.println("===================");
         
-        // Simulate successful SMS sending
-        // In production, replace with actual API calls
+        // Actual AWS SNS implementation would require AWS SDK
+        throw new Exception("AWS SNS SMS not implemented yet");
+    }
+    
+    private void sendNexmoSMS(Notification notification, SystemSettings settings) throws Exception {
+        // Nexmo/Vonage SMS implementation
+        System.out.println("=== NEXMO SMS ===");
+        System.out.println("To: " + notification.getMemberContact());
+        System.out.println("Message: " + notification.getMessage());
+        System.out.println("=================");
+        
+        // Actual Nexmo implementation would require Nexmo SDK
+        throw new Exception("Nexmo SMS not implemented yet");
     }
     
     // Send bulk notifications
@@ -203,17 +308,6 @@ public class NotificationService {
             notification.setType("EMAIL");
         }
         
-        // Get book title from Book repository
-        String bookTitle = "Unknown Book";
-        try {
-            Optional<Book> optBook = bookRepository.findById(borrow.getBookID());
-            if (optBook.isPresent()) {
-                bookTitle = optBook.get().getTitle();
-            }
-        } catch (Exception e) {
-            System.err.println("Failed to fetch book title: " + e.getMessage());
-        }
-        
         notification.setSubject("Book Due Date Reminder");
         notification.setMessage(String.format(
             "Dear %s,\n\nThis is a reminder that your borrowed book '%s' is due on %s.\n\nPlease return it on time to avoid fines.\n\nThank you,\n%s",
@@ -245,17 +339,6 @@ public class NotificationService {
             notification.setType("SMS");
         } else {
             notification.setType("EMAIL");
-        }
-        
-        // Get book title from Book repository
-        String bookTitle = "Unknown Book";
-        try {
-            Optional<Book> optBook = bookRepository.findById(borrow.getBookID());
-            if (optBook.isPresent()) {
-                bookTitle = optBook.get().getTitle();
-            }
-        } catch (Exception e) {
-            System.err.println("Failed to fetch book title: " + e.getMessage());
         }
         
         notification.setSubject("Overdue Book Notice");
@@ -291,17 +374,6 @@ public class NotificationService {
             notification.setType("EMAIL");
         }
         
-        // Get book title from Book repository
-        String bookTitle = "Unknown Book";
-        try {
-            Optional<Book> optBook = bookRepository.findById(reservation.getBookID());
-            if (optBook.isPresent()) {
-                bookTitle = optBook.get().getTitle();
-            }
-        } catch (Exception e) {
-            System.err.println("Failed to fetch book title: " + e.getMessage());
-        }
-        
         notification.setSubject("Reserved Book Available");
         notification.setMessage(String.format(
             "Dear %s,\n\nYour reserved book '%s' is now available for pickup.\n\nPlease collect it within %d days.\n\nThank you,\n%s",
@@ -335,30 +407,12 @@ public class NotificationService {
             notification.setType("EMAIL");
         }
         
-        // Get book title from BorrowRecord if available
-        String bookTitle = "a book";
-        if (fine.getBorrowRecordID() != null) {
-            try {
-                Optional<BorrowRecord> optBorrow = borrowRecordRepository.findById(fine.getBorrowRecordID());
-                if (optBorrow.isPresent()) {
-                    BorrowRecord borrow = optBorrow.get();
-                    Optional<Book> optBook = bookRepository.findById(borrow.getBookID());
-                    if (optBook.isPresent()) {
-                        bookTitle = optBook.get().getTitle();
-                    }
-                }
-            } catch (Exception e) {
-                System.err.println("Failed to fetch book title for fine: " + e.getMessage());
-            }
-        }
-        
         notification.setSubject("Fine Notice");
         notification.setMessage(String.format(
             "Dear %s,\n\nYou have an outstanding fine of $%.2f for %s.\n\nReason: %s\n\nPlease pay at your earliest convenience.\n\nThank you,\n%s",
             member.getName(),
             fine.getAmount(),
-            bookTitle,
-            fine.getReason() != null ? fine.getReason() : "Library fine",
+            fine.getBookTitle(),
             settings.getLibraryName()
         ));
         
@@ -418,8 +472,13 @@ public class NotificationService {
         LocalDate reminderDate = LocalDate.now().plusDays(settings.getDueDateReminderDays());
         
         List<BorrowRecord> upcomingDueBorrows = borrowRecordRepository.findAll().stream()
-            .filter(b -> "BORROWED".equals(b.getStatus()) && b.getDueDate() != null && b.getDueDate().equals(reminderDate))
-            .toList();
+            .filter(b -> "BORROWED".equals(b.getStatus()))
+            .filter(b -> {
+                LocalDate dueDate = b.getDueDate().toInstant()
+                    .atZone(ZoneId.systemDefault()).toLocalDate();
+                return dueDate.equals(reminderDate);
+            })
+            .collect(Collectors.toList());
         
         for (BorrowRecord borrow : upcomingDueBorrows) {
             Optional<Member> optMember = memberRepository.findById(borrow.getMemberID());
@@ -438,8 +497,12 @@ public class NotificationService {
     private void sendOverdueReminders(SystemSettings settings) {
         List<BorrowRecord> overdueBorrows = borrowRecordRepository.findAll().stream()
             .filter(b -> "BORROWED".equals(b.getStatus()))
-            .filter(b -> b.getDueDate() != null && b.getDueDate().isBefore(LocalDate.now()))
-            .toList();
+            .filter(b -> {
+                LocalDate dueDate = b.getDueDate().toInstant()
+                    .atZone(ZoneId.systemDefault()).toLocalDate();
+                return dueDate.isBefore(LocalDate.now());
+            })
+            .collect(Collectors.toList());
         
         for (BorrowRecord borrow : overdueBorrows) {
             Optional<Member> optMember = memberRepository.findById(borrow.getMemberID());
@@ -524,27 +587,139 @@ public class NotificationService {
             result.put("emailMessage", "Email notifications are disabled");
         }
         
-        // Test SMS
-        if (settings.getSmsNotificationsEnabled()) {
-            try {
-                Notification testNotification = new Notification();
-                testNotification.setMemberContact(testPhone);
-                testNotification.setMessage("This is a test SMS from Library System");
-                testNotification.setType("SMS");
-                
-                sendSMS(testNotification, settings);
-                result.put("smsStatus", "SUCCESS");
-                result.put("smsMessage", "Test SMS sent successfully");
-            } catch (Exception e) {
-                result.put("smsStatus", "FAILED");
-                result.put("smsMessage", e.getMessage());
-            }
-        } else {
-            result.put("smsStatus", "DISABLED");
-            result.put("smsMessage", "SMS notifications are disabled");
-        }
+        // Test SMS - temporarily disabled
+        result.put("smsStatus", "SKIPPED");
+        result.put("smsMessage", "SMS provider not configured - feature temporarily disabled");
         
         return result;
+    }
+    
+    // Create borrow approval notification
+    public Notification createBorrowApprovalNotification(BorrowRecord borrow, Member member, Book book) {
+        Notification notification = new Notification();
+        notification.setMemberId(member.getId());
+        notification.setMemberName(member.getName());
+        notification.setMemberEmail(member.getEmail());
+        notification.setMemberContact(member.getContact());
+        notification.setCategory("BORROW_APPROVAL");
+        notification.setRelatedEntityId(borrow.getId());
+        
+        SystemSettings settings = getSystemSettings();
+        
+        // Determine notification type based on what's available for this member
+        boolean hasEmail = member.getEmail() != null && !member.getEmail().isEmpty();
+        boolean hasContact = member.getContact() != null && !member.getContact().isEmpty();
+        boolean emailEnabled = settings.getEmailNotificationsEnabled();
+        boolean smsEnabled = settings.getSmsNotificationsEnabled();
+        
+        if (hasEmail && hasContact && emailEnabled && smsEnabled) {
+            notification.setType("BOTH");
+        } else if (hasEmail && emailEnabled) {
+            notification.setType("EMAIL");
+        } else if (hasContact && smsEnabled) {
+            notification.setType("SMS");
+        } else {
+            notification.setType("EMAIL");
+            notification.setStatus("FAILED");
+            notification.setErrorMessage("Member has no email or phone number");
+        }
+        
+        notification.setSubject("Book Borrow Request Approved");
+        notification.setMessage(String.format(
+            "Dear %s,\n\nGreat news! Your request to borrow '%s' has been approved.\n\nBorrow Details:\n- Book: %s\n- Issue Date: %s\n- Due Date: %s\n\nPlease collect the book from the library.\n\nThank you,\n%s",
+            member.getName(),
+            book.getTitle(),
+            book.getTitle(),
+            borrow.getIssueDate(),
+            borrow.getDueDate(),
+            settings.getLibraryName()
+        ));
+        
+        return notificationRepository.save(notification);
+    }
+    
+    // Create borrow rejection notification
+    public Notification createBorrowRejectionNotification(BorrowRecord borrow, Member member, Book book) {
+        Notification notification = new Notification();
+        notification.setMemberId(member.getId());
+        notification.setMemberName(member.getName());
+        notification.setMemberEmail(member.getEmail());
+        notification.setMemberContact(member.getContact());
+        notification.setCategory("BORROW_REJECTION");
+        notification.setRelatedEntityId(borrow.getId());
+        
+        SystemSettings settings = getSystemSettings();
+        
+        // Determine notification type based on what's available for this member
+        boolean hasEmail = member.getEmail() != null && !member.getEmail().isEmpty();
+        boolean hasContact = member.getContact() != null && !member.getContact().isEmpty();
+        boolean emailEnabled = settings.getEmailNotificationsEnabled();
+        boolean smsEnabled = settings.getSmsNotificationsEnabled();
+        
+        if (hasEmail && hasContact && emailEnabled && smsEnabled) {
+            notification.setType("BOTH");
+        } else if (hasEmail && emailEnabled) {
+            notification.setType("EMAIL");
+        } else if (hasContact && smsEnabled) {
+            notification.setType("SMS");
+        } else {
+            notification.setType("EMAIL");
+            notification.setStatus("FAILED");
+            notification.setErrorMessage("Member has no email or phone number");
+        }
+        
+        notification.setSubject("Book Borrow Request Rejected");
+        notification.setMessage(String.format(
+            "Dear %s,\n\nWe regret to inform you that your request to borrow '%s' has been rejected.\n\nThis could be due to:\n- Book is currently unavailable\n- Outstanding fines on your account\n- Maximum borrow limit reached\n\nPlease contact the library for more information.\n\nThank you,\n%s",
+            member.getName(),
+            book.getTitle(),
+            settings.getLibraryName()
+        ));
+        
+        return notificationRepository.save(notification);
+    }
+    
+    // Create book return confirmation notification
+    public Notification createBookReturnConfirmationNotification(BorrowRecord borrow, Member member, Book book) {
+        Notification notification = new Notification();
+        notification.setMemberId(member.getId());
+        notification.setMemberName(member.getName());
+        notification.setMemberEmail(member.getEmail());
+        notification.setMemberContact(member.getContact());
+        notification.setCategory("BOOK_RETURN");
+        notification.setRelatedEntityId(borrow.getId());
+        
+        SystemSettings settings = getSystemSettings();
+        
+        // Determine notification type based on what's available for this member
+        boolean hasEmail = member.getEmail() != null && !member.getEmail().isEmpty();
+        boolean hasContact = member.getContact() != null && !member.getContact().isEmpty();
+        boolean emailEnabled = settings.getEmailNotificationsEnabled();
+        boolean smsEnabled = settings.getSmsNotificationsEnabled();
+        
+        if (hasEmail && hasContact && emailEnabled && smsEnabled) {
+            notification.setType("BOTH");
+        } else if (hasEmail && emailEnabled) {
+            notification.setType("EMAIL");
+        } else if (hasContact && smsEnabled) {
+            notification.setType("SMS");
+        } else {
+            notification.setType("EMAIL");
+            notification.setStatus("FAILED");
+            notification.setErrorMessage("Member has no email or phone number");
+        }
+        
+        notification.setSubject("Book Return Confirmed");
+        notification.setMessage(String.format(
+            "Dear %s,\n\nThank you for returning '%s' on time!\n\nReturn Details:\n- Book: %s\n- Return Date: %s\n- Status: Returned Successfully\n\nWe appreciate your responsible use of library resources.\n\nThank you,\n%s",
+            member.getName(),
+            book.getTitle(),
+            book.getTitle(),
+            borrow.getReturnDate(),
+            settings.getLibraryName()
+        ));
+        
+        return notificationRepository.save(notification);
     }
     
     private SystemSettings getSystemSettings() {
@@ -555,5 +730,179 @@ public class NotificationService {
             return settingsRepository.save(defaultSettings);
         }
         return settings.get(0);
+    }
+    
+    // Create payment confirmation notification
+    public Notification createPaymentConfirmationNotification(Fine fine, Member member, Payment payment) {
+        Notification notification = new Notification();
+        notification.setMemberId(member.getId());
+        notification.setMemberName(member.getName());
+        notification.setMemberEmail(member.getEmail());
+        notification.setMemberContact(member.getContact());
+        notification.setCategory("PAYMENT_CONFIRMATION");
+        notification.setRelatedEntityId(fine.getId());
+        
+        SystemSettings settings = getSystemSettings();
+        
+        // Determine notification type based on what's available for this member
+        boolean hasEmail = member.getEmail() != null && !member.getEmail().isEmpty();
+        boolean hasContact = member.getContact() != null && !member.getContact().isEmpty();
+        boolean emailEnabled = settings.getEmailNotificationsEnabled();
+        boolean smsEnabled = settings.getSmsNotificationsEnabled();
+        
+        if (hasEmail && hasContact && emailEnabled && smsEnabled) {
+            notification.setType("BOTH");
+        } else if (hasEmail && emailEnabled) {
+            notification.setType("EMAIL");
+        } else if (hasContact && smsEnabled) {
+            notification.setType("SMS");
+        } else {
+            notification.setType("EMAIL");
+            notification.setStatus("FAILED");
+            notification.setErrorMessage("Member has no email or phone number");
+        }
+        
+        notification.setSubject("Payment Received - Receipt");
+        notification.setMessage(String.format(
+            "Dear %s,\n\nThank you for your payment!\n\nPayment Details:\n- Amount Paid: $%.2f\n- Payment Date: %s\n- Payment Method: %s\n- Fine Status: %s\n\nYour payment has been successfully processed.\n\nThank you,\n%s",
+            member.getName(),
+            payment.getAmount(),
+            payment.getPaymentDate(),
+            payment.getPaymentMethod(),
+            fine.getStatus(),
+            settings.getLibraryName()
+        ));
+        
+        return notificationRepository.save(notification);
+    }
+    
+    // Create fine waiver notification
+    public Notification createFineWaiverNotification(Fine fine, Member member, String reason) {
+        Notification notification = new Notification();
+        notification.setMemberId(member.getId());
+        notification.setMemberName(member.getName());
+        notification.setMemberEmail(member.getEmail());
+        notification.setMemberContact(member.getContact());
+        notification.setCategory("FINE_WAIVER");
+        notification.setRelatedEntityId(fine.getId());
+        
+        SystemSettings settings = getSystemSettings();
+        
+        // Determine notification type based on what's available for this member
+        boolean hasEmail = member.getEmail() != null && !member.getEmail().isEmpty();
+        boolean hasContact = member.getContact() != null && !member.getContact().isEmpty();
+        boolean emailEnabled = settings.getEmailNotificationsEnabled();
+        boolean smsEnabled = settings.getSmsNotificationsEnabled();
+        
+        if (hasEmail && hasContact && emailEnabled && smsEnabled) {
+            notification.setType("BOTH");
+        } else if (hasEmail && emailEnabled) {
+            notification.setType("EMAIL");
+        } else if (hasContact && smsEnabled) {
+            notification.setType("SMS");
+        } else {
+            notification.setType("EMAIL");
+            notification.setStatus("FAILED");
+            notification.setErrorMessage("Member has no email or phone number");
+        }
+        
+        notification.setSubject("Fine Waived - Good News!");
+        notification.setMessage(String.format(
+            "Dear %s,\n\nGreat news! Your fine has been waived.\n\nFine Details:\n- Original Amount: $%.2f\n- Reason for Waiver: %s\n- Waived Date: %s\n\nNo payment is required for this fine.\n\nThank you,\n%s",
+            member.getName(),
+            fine.getAmount(),
+            reason,
+            fine.getPaidDate(),
+            settings.getLibraryName()
+        ));
+
+        return notificationRepository.save(notification);
+    }
+    
+    // Create reservation approval notification
+    public Notification createReservationApprovalNotification(Reservation reservation, Member member, Book book) {
+        Notification notification = new Notification();
+        notification.setMemberId(member.getId());
+        notification.setMemberName(member.getName());
+        notification.setMemberEmail(member.getEmail());
+        notification.setMemberContact(member.getContact());
+        notification.setCategory("RESERVATION_APPROVAL");
+        notification.setRelatedEntityId(reservation.getId());
+        
+        SystemSettings settings = getSystemSettings();
+        
+        // Determine notification type based on what's available for this member
+        boolean hasEmail = member.getEmail() != null && !member.getEmail().isEmpty();
+        boolean hasContact = member.getContact() != null && !member.getContact().isEmpty();
+        boolean emailEnabled = settings.getEmailNotificationsEnabled();
+        boolean smsEnabled = settings.getSmsNotificationsEnabled();
+        
+        if (hasEmail && hasContact && emailEnabled && smsEnabled) {
+            notification.setType("BOTH");
+        } else if (hasEmail && emailEnabled) {
+            notification.setType("EMAIL");
+        } else if (hasContact && smsEnabled) {
+            notification.setType("SMS");
+        } else {
+            notification.setType("EMAIL");
+            notification.setStatus("FAILED");
+            notification.setErrorMessage("Member has no email or phone number");
+        }
+        
+        notification.setSubject("Book Reservation Approved");
+        notification.setMessage(String.format(
+            "Dear %s,\n\nGreat news! Your reservation for '%s' has been approved.\n\nReservation Details:\n- Book: %s\n- Reservation Date: %s\n- Status: Approved\n\nWe will notify you when the book becomes available for pickup.\n\nThank you,\n%s",
+            member.getName(),
+            book.getTitle(),
+            book.getTitle(),
+            reservation.getReservationDate(),
+            settings.getLibraryName()
+        ));
+        
+        return notificationRepository.save(notification);
+    }
+    
+    // Create reservation cancellation notification
+    public Notification createReservationCancellationNotification(Reservation reservation, Member member, Book book) {
+        Notification notification = new Notification();
+        notification.setMemberId(member.getId());
+        notification.setMemberName(member.getName());
+        notification.setMemberEmail(member.getEmail());
+        notification.setMemberContact(member.getContact());
+        notification.setCategory("RESERVATION_CANCELLATION");
+        notification.setRelatedEntityId(reservation.getId());
+        
+        SystemSettings settings = getSystemSettings();
+        
+        // Determine notification type based on what's available for this member
+        boolean hasEmail = member.getEmail() != null && !member.getEmail().isEmpty();
+        boolean hasContact = member.getContact() != null && !member.getContact().isEmpty();
+        boolean emailEnabled = settings.getEmailNotificationsEnabled();
+        boolean smsEnabled = settings.getSmsNotificationsEnabled();
+        
+        if (hasEmail && hasContact && emailEnabled && smsEnabled) {
+            notification.setType("BOTH");
+        } else if (hasEmail && emailEnabled) {
+            notification.setType("EMAIL");
+        } else if (hasContact && smsEnabled) {
+            notification.setType("SMS");
+        } else {
+            notification.setType("EMAIL");
+            notification.setStatus("FAILED");
+            notification.setErrorMessage("Member has no email or phone number");
+        }
+        
+        notification.setSubject("Reservation Cancelled");
+        notification.setMessage(String.format(
+            "Dear %s,\n\nWe regret to inform you that your reservation for '%s' has been cancelled.\n\nReservation Details:\n- Book: %s\n- Original Reservation Date: %s\n- Cancellation Date: %s\n\nThis could be due to:\n- Book no longer available\n- System maintenance\n- Administrative decision\n\nPlease contact the library for more information or to make a new reservation.\n\nThank you,\n%s",
+            member.getName(),
+            book.getTitle(),
+            book.getTitle(),
+            reservation.getReservationDate(),
+            LocalDate.now(),
+            settings.getLibraryName()
+        ));
+        
+        return notificationRepository.save(notification);
     }
 }
